--- a/imageViewer/Form1.resx
+++ b/imageViewer/Form1.resx
@@ -129,7 +129,114 @@
   <metadata name="contextMenuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>364, 17</value>
   </metadata>
+  <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>519, 17</value>
+  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="NextButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAAAH5JREFUOE/N0jsOQEAUheGJnj1YCHvBcjxWQ6tQsBgroOE/olC6M4k4yVe4iTNj
+        jPtlBixIryePTDiwItPAmhjahUo2lDAnQguVSHPPzNHqO1TSQ7szJ4fOQyWjBtYEFVTw+gQdWAe9KPU9
+        e5UEz99YwJTgi6TVZ3hf5S/j3AkEQyF/OUGa7wAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="RotateButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAAARNJREFUOE+10z9LAnEcx/EjSyvETbCCouhp6IPQRNClJRpqCXoODSUuiUqPo4Ya
+        rMG1ycFNUJQi013LfH9+54X57yD0DS+4nxzn3fd3Zy2rbZwgg2ucI4SpVRGxD61NZPGDD9zjEZ/4Rh4+
+        /EknH2EHZbSRwCqcvEiigxI28JsucAbdSQV7mNUB3nFlVsN0Af3rK4L6waUYvqA7NukCo/oIY1YraOHY
+        rOgUKWgOEoWGOa8HaNj/7hlp+9BOg9N+6/bcWoMGeWlWww7Rg7bKrTh07pZZjXSLOvbNanq7eEPBrMYK
+        QM/WhAbpgZMeTdtXQxETb6PTOnLoooEXPEHvifb+Bn64po/pAvqY7qCt1pwWnWUNACsTODzfaQUaAAAA
+        AElFTkSuQmCC
+</value>
+  </data>
+  <data name="PreviousButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAAAIdJREFUOE/VkjEOQEAQRTd6h3AQDuM83IZWoeAwTkDDf0Iy5cwmCi95hUlmZvfb
+        9Bsqucrx/grSyE2ecqYQoZWHpHmQpXRRyF7SiN1Tc8EWttG4S04RYpI0c++aQhQ7gADD2CsQYPgKQGAE
+        xxAkUHeIFrYTJENCv9FCkNkP6YWnvMisp/wlKV21PiF8wxEHWQAAAABJRU5ErkJggg==
+</value>
+  </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>43</value>
   </metadata>
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAAAAAAAEAIACyEAAAFgAAAIlQTkcNChoKAAAADUlIRFIAAAEAAAABAAgDAAAAa6xYVAAAAAFz
+        UkdCAdnJLH8AAAAJcEhZcwAAB2IAAAdiATh6mdsAAALHUExURQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB/MLD0AAADtdFJOUwAKNl2ClZ+qmo93UCYBJHzB+P/q
+        qWANA1nE/vWiL9uzLSv7jAxe2TAHp/e5gMh9Bbdt/EBU6BgX7q1LN1os0wTnlOaBKcD2wrDRaewoupYU
+        WL01pA/r3UI9k09iVQIuXIOZpVtKpkkIa+Df19yRzMoWHRwT1tUSvPr5vz48smeu6UdFUSAiGWHYtHXD
+        0B6s418y8LaHZu1WETQa5DoJy3lORPL0hjEO/Zczm+/UP4WgTahMhJh/FSrPkmWesTnNer5+xgs4ZPPx
+        yWOvSHvH3lIG4kYhuM6Q2ol2G27h5WoQOyWIuydvi2xzH0MjjWU/7noAAAyLSURBVHic7Z39YxTFHcYv
+        iBDRk2R5CSRRQggQEYkNUBJBCS9G5EUa3qsJEkCQoBDeTCIqoBKpIi9RgoIREVFpkFJbQHkRLFYQSo1Q
+        qli1trXv/SN6e8mxu7Ozu/Pd+e7M7d1+fmT2hud5crffnd3ZmVAoICAgICAgICAgICAgICAgICAgICCA
+        mZR217S/tkPHeCf1uk7X3xBGd39j57R0xT906dqtO6L7jB49M2VbApOVfROS/fA1N8s2447MXjkY/nun
+        yTbintw+edz++2bJdsFFv/589vNvke2AlwF9efzn3SpbPz+ZAzn83yZbPQqD3PovuF22dCR+5DKAa2UL
+        x6JwsCv/Q2TrxmPoj134H1YkWzYixS4CyJYtGpU7wP6H++/q345+GdAAesmWjMwIoP87E+sLoCh3AQO4
+        TrZgdIaD/I8ska0XnVGgAAbLlovPaNBtsjGy5XrAWEgAd1t0UnqP7HueToy71yqA8ZAAJlC7KBzDf4PF
+        eyZOogdwH6CPydQeMn/imWhUMjpS5ZcBuphC7WGqZ5KRmTadJn8GoIeZ1ABmeaYYm5/S5E8HdHA/NQA/
+        nABaeYAmPx3QQTk1AM/0osOtPwggCCAIIAgA0kHF7AfnVM6dW9l+3mz8J/MuEBtAxvyHdFfO0+cuAN99
+        QkdkAAsfXkQeVzU+H8eHawQGMHMx7chHFiA5cYmwABY+Sj0wQnYKmhsXiApg2BIr/4qytBrPDxhBASyz
+        nTrTbzmiIyBiAlix0s6/oqx6DNMTCCEBZFjdNrtKTQWqKwBCAmjv5J9jZgIvIgLoXescQB3oRiwiIgJ4
+        3Nm/okzC9YWpn7eD1Sz+FeUJZGdo+rk7eJItgHHIztD083ZQzXAGUMkdhu0NRz93Bw+z+VeUp7C94ejn
+        7mANawAdsb3h6OfuYC1rACXI1pD083bwGKt/RZFyPex5AMPZA5iC7g5BP3cH69gDeBrdHYJ+7g6eYQ/g
+        GXR3CPq5O7iDPQApN8c8D4DxQlhFysWw5wE8yx7AMn47+dXr62H3mT0PoKKU1X8W54OS6uce2pCrdrTo
+        Z8/noOnn7+AF1gDuBvyvZtp1rdN3tnH8QiT93B0wT6PjuSn04ibTfN3NW3D0c3ewlTWA2SDLBuY10Dp8
+        ieV2u4D7AXex+d8I86wj/LJFl1U5GPq5O9jGFsADMNc67rPsszEHQT93B/mbWfxXFQBtX8XunvPQ9fz6
+        +TsYwRLAEKjvGNttX1dY/Aq/fv4OGF4qfQnqO8arDtcZaQ7XRUICGDbayb+rl9VUdux06roDv37+DmYN
+        sBdZ+hrUeBtNrzv5V5Rd/Pr5O7je9tZw7RtA3zHCXZ39K5nz+PXzd7D7TWuFe1yPg99i8K8oA+y+X8Jm
+        iOy1nCHQz/UCHuWM76tNv5FfP38Hb6e+QzvynXddr+Gyj3nFCptiKHKW2PAa84GT3N8JdS4AGtbFUOw8
+        weE/b9Af1ZzaDuZZD0sB0LAshuAAJvN1kD94zJr9jXV1jfvXjHmPZ44gUwHQYVUMwQGQo2xZc4UPwPxb
+        FkOo/qZfcHaABGsB0LAohlD9B8lHmHICYC8AGvRiCNWfGhcBQAqABrUYAvWHd8ZDAE1L3finF0Og/n2m
+        p/gSAgj/0p1/ajEE6h8YDwFAC4AOczEE6l8SBwHAC4CGuRjC9O/IlB+AmwKgYSqGMP3bzDN5RAfgrgBo
+        kMUQpv9J6QG4LQAaRDEE6W/Kkh2A+wKgYSyGIP3vK7ID+BW/f6IYgvT/WnYAPAVAh74YQvSHN0sOgK8A
+        aOiLIUR/9DmvxAB4C4CGrhhC9B+SGwB/AdDQiiFE/+v4ARw+sq//Mrb3Z8Ob8PwryspYMQTor8/EDeDI
+        oLLm6MF1H3y4zjmEOZj+FaWsAKz/qIIYQMV24xe6pLPDY9we2GvWHQPrPx5twgngxEemjzSOt3t1rp3D
+        00UXnATqb9oTbcIIIKN9Ie1DNfWWn1ju+HwZTuZ2mP62Oa8IAeRbnc5GWz0kwywAGtFiyK7/3dYm/gDy
+        rNegL3qV+gncAqDRZT1Af7htpg93ACmnbCQ1UBdzRC4AGpGRIbP+vW1NvAHY+qcngDQCoJGWz6z/47Ym
+        zgAc/NMSwBoBUOnArD92GuILIO8eR0nNxANTLwqAjt9Q/9WsvD72NeQK4LTT31+l4RP9R7wpAE6Ypf82
+        1sQTwGmm16gNCYTl7Fth1j4u1sQRAKN/QwKeFQB7TNrzP401uQ+A2b+inIklMETSqtUm8fOvNrkOAOD/
+        agJbZe1bY1KvTch2GwDIv6LsWR35zA6madZeYJKvrYHlMgCg/2gCcgpAFFJ+f63JXQBg/5EEBkvcuIjU
+        P0hrchUAw/WPmVx32lEgAzirNbkJwMXfXzKEyWrdHE8XAfjPPxnAZ7omeAA+9E8GcE7XBA7Aj/6JAPL1
+        U92hAfjSPxHAAn0TMAB/+icCMGwkBgvAp/6JAKr0TaAA/OrfGMBNhiZIAL71bwygs6EJEIB//RsDMO4l
+        yR6Aj/0bAqg2vurDHICf/RsCILZgYA3A1/4NARCLoTEG4G//+gDyiTce2QLwuX99AOeJJrYAenqv0VN0
+        BkcRTWwB+B2dwSqiKdkCmE02JVsAvyObki2AC2RTkgVQbXrjO8kCeM7UlGQBFJuakisA8jJQSbYAKCui
+        JlcAlN0IkyuA35ubkiqAHEpTUgVwktKUVAHQ5tAlUwCHCylNyRRAN1oTGcDnorWJoLDVG3WSOhkAYPF0
+        /9ActdZCXf+MDOA10eJE8EXU2kVq2zkigEtipYnhbNTah9S2PxABVOC/zSSf7Kg1ymVghBeIAEIbBYsT
+        QfSFsjvpbTeTAViv6utf1GmqoV30tnRyDfgEvBDIii6xYPVsYwcRwCvpQsWJ4Ljqi3oZqDKf/A2Y7xr5
+        nXLV1har1s5kAG+I1CaCoujWBB2tmo+TAVTsF6lOAGNUVwUNVs1nTKugW35Z/Mme6KKZT1sfcIIMIOOy
+        OHUCaH2r/I/WBxwiAwhNoS6Y61O+bF1maIb1EUtMAYQst9X2H7mtux2NtTtmoimAAtMjRN/StsbQUbtj
+        vjJ/BS6ViBLoMcVty1ik2h1UQtkNI6dIlERPSYvtTmQ/x6evOYDQiUZBGr0kbVrMDjkxxshi2nInvaW9
+        5IdGsbY71R77I6k7ohy+XYxMrygcqPu7OozwZlBXBa+4IutNVww2GHb7cxriXqEFEAo9u0bSy87cvHmy
+        xeDEqaqdeZGeQGhrsR+vCovaryB8fOD0kTLLzQG/vnLZX1+DrOPl5q35nG9y/MkqgAiHy786t6rkU8c+
+        ZFP0zdLsk6tbaBYGOX64dpZNAv6H4YHXt9YrfyUACx0uBFTO5slW6SXnnANQyhi39fQlBxkCUHrx7JIS
+        52R8wZLAqbdl6/SO8SwBKJe/lq3TM1roz0ZJhg6WLdQz5ju7V8ndxbYqrg+ZypaActsR2Uo9ovtixgTS
+        30rQc+FY5vt8a79LzIL4ic02kQQlu/4sW60XfD+BOQGldOrFBDwd3vAlewKRX0J2D5b9zn1F3jFIAhEW
+        FX/cd/VfJifQafH8SmAEcY/tNrwUCo4mVgS18NN1+OKxRHju08YksH+VkU8M7ClzfTtEvnMVgMrp3X9d
+        4q8bvjQyl7sOQGVYeaXPnwFe4PIfZf22jmdk23BPJ/4AIozc1+lvthvKxy8/oASgkhc5Jch2A2clmv8o
+        9eWV38q2BOMAbgAqkVMC+6hROu43e7ejKfJr8MdT4Z2WD3W5mVxeyXYfVSqjPPMfJfJriPNr5t3eBhAh
+        I1Ig4/cVimbqs3B0UuL2mjlbiP8oh8srFzkLEs3n4gJQiZwSmmVbNlB6WmwAodZTQp1s31cZJ9x/lPgZ
+        RneTE4BKXAyjCyfLC0AlckpokBrA43L9q8gdRv9dtv1W5A2jL8m2riFlGP2RbNcEwofRg2Q7NjNy30CB
+        w+gc2XbprBA1jH5EtlMbhAyj/yHbpT0VkQLp7XIk38u26EzK+T73enbNPNRuY+s4wrNhdKpsZwAm/vM4
+        /qOn87JdwUAfRn/jwwlM3d9/dBVaAP+S7cYlkWE007x1J0anyHbCAcYweotsE5y0vDfnQiGH/xrvHgiJ
+        g2MYvTZhXmv492e3dIH7T18tWzcmFXufv7UU5L+wXLZmdBb+52X2YXQd9WV//9P9YKXNUjcaE2bKVuoh
+        /31qk9MwuszqPfdEIWPKrlPWT6O7bEuE+udIyro+G2nD6AmHEvItDjrVI44Zr5lra/r6+fLXFT88+L+y
+        DWvr0hv39zpw/zTn4635PyXaJ/lh2MH8AAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
